# gnosis

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DEAD_CODE_REPORT.md  Dockerfile.gateway  Dockerfile.vlm_server  PR_MESSAGE.md  README.md  TODO  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ruff-formal.yml
app/: README.md  client.py  server.py  test_inference.py
app/eval/: README.md  pyproject.toml
app/eval/app/: api.py  db.py  log.py
app/eval/tests/: test_connection.py  test_inference.py
app/gateway/: Dockerfile  README.md  client.py  pyproject.toml  server.py
app/gateway/app/: grpc_client.py
app/gateway/app/gRPC/protos/: vlm.proto
app/gateway/app/preprocessing/: main.py
app/gateway/app/routers/: grpc_runner.py  modal_runner.py  process_router.py
app/gateway/app/services/inference/: main.py
app/gateway/app/services/inference/vlm/: __init__.py  transformer.py  vlm.py
app/gateway/app/utils/: image_validation.py  mem.py
app/gateway/models/: vlm_models.py
app/gateway/routers/: health_router.py
app/gateway/services/inference/compute/vlm_server/src/: README.md
app/gateway/services/preprocessing/: main.py  standardize.py
app/gateway/src/: client.py
app/gateway/src/models/: vlm_models.py
app/gateway/src/routers/: process_router.py
app/gateway/src/services/inference/: __init__.py  main.py
app/gateway/src/services/inference/vlm/: __init__.py
app/gateway/src/services/preprocessing/: main.py
app/gateway/src/utils/: mem.py  processbytes.py
app/gateway/tests/: test_inference.py
app/gateway/utils/: image_validation.py
app/models/: vlm_models.py
app/routers/: health_router.py  process_router.py
app/services/inference/: main.py
app/services/inference/vlm/: transformer.py  vlm.py
app/shared/: pyproject.toml
app/src/protos/: request.proto
app/src/services/inference/: README.md  prompts.py
app/src/services/preprocessing/: main.py  rotate.py
app/src/utils/: logging.py  processbytes.py
app/tests/: test_inference.py
app/utils/: image_validation.py  processbytes.py
app/vlm_server/: README.md  pyproject.toml
app/vlm_server/app/: server.py
app/vlm_server/app/inference/vlm/: vlm.py
app/vlm_server/app/utils/: __init__.py
app/vlm_server/scripts/: download_dots.sh
app/vlm_server/src/: README.md  server.py
app/vlm_server/src/infer/: README.md  __init__.py
app/vlm_server/src/infer/prompts/: __init__.py
app/vlm_server/src/infer/vlm/: transformer.py  vlm.py
app/vlm_server/tests/: grpc_client.py  vlm_test.py
data/: image_directory.yaml  oildata.csv
docs/: arch_and_comms.md  architecture.md  neon_schema.sql  notes.md
frontend/: Dockerfile  README.md  bun.lockb  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: AdminRoute.tsx  BenchmarkCard.tsx  ErrorBoundary.tsx  FileUploadZone.tsx  HealthIndicator.tsx  LoginPage.tsx  ModelSelector.tsx  Navbar.tsx  ProtectedRoute.tsx  ResultsPanel.tsx
frontend/src/components/admin/: AdminBenchmark.tsx  AdminLoginPage.tsx  AdminNav.tsx  AdminPanel.tsx  (+2 more)
frontend/src/hooks/: useAdmin.ts  useHealth.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Account.tsx  AdminPage.tsx  Index.tsx  InvitePage.tsx
frontend/src/stores/: userStore.ts
frontend/src/types/: user.ts
lib/: pyproject.toml
lib/src/lib/db/: __init__.py  client.py
lib/src/lib/db/operations/: __init__.py  eval.py  inference_models.py  schema.py  table.py  users.py
lib/src/lib/gRPC/protos/: vlm.proto
lib/src/lib/inference/: __init__.py  config.py  normalize.py  parse.py  schema.py
lib/src/lib/metrics/: __init__.py  rms.py  rnss.py
lib/src/lib/metrics/tests/: test_rms.py  test_rnss.py
lib/src/lib/models/: __init__.py  vlm.py  vlm_models.py
lib/src/lib/models/vlm/: __init__.py  config.py  response.py  table.py
lib/src/lib/storage/: __init__.py
lib/src/lib/utils/: image.py  system.py
old/: .pre-commit-config.yaml  README.md
old/app/gateway/: README.md  pyproject.toml
old/app/gateway/app/routers/: modal_runner.py
old/app/vlm_server/: pyproject.toml
scripts/: delete_pycache.sh  dump_schema.sh  format.sh  gen_grpc_protos.sh  models.json  populate_db_with_models.py  read_oildata.py  run_gateway.sh  run_vlm_server.sh  schema.sql  setup.sh  setup_s3_bucket.py  supabase_rls.sql  sync.sh
services/eval/: .env.example  README.md  pyproject.toml
services/eval/scripts/: process_and_upload_dataset.py
services/eval/src/eval/: __init__.py  api.py  data.py  db.py  eval.py  eval_models.py  main.py  models.py
services/eval/src/eval/data/: __init__.py  bucket.py  data.py  db.py  local.py  pipeline.py  s3_bucket.py  supabase_rls_sql  utils.py
services/eval/src/eval/datasets/: example.csv
services/eval/src/eval/metrics/: __init__.py  rms.py
services/eval/tests/: conftest.py  test_benchmark_db.py  test_connection.py  test_db.py  test_eval.py  test_eval_cloud.py  test_inference.py  test_local_dataset_handling.py  test_pipeline.py  test_rms.py  test_rnss.py  test_s3_operations.py
services/gateway/: Dockerfile  README.md  pyproject.toml
services/gateway/gateway/preprocessing/: standardize.py
services/gateway/gateway/routers/: modal_runner.py
services/gateway/src/gateway/: config.py  server.py
services/gateway/src/gateway/preprocessing/: main.py
services/gateway/src/gateway/routers/: grpc_runner.py  health_router.py  modal_runner.py  process_router.py
services/gateway/test/: test_inference.py
services/gateway/tests/: test_inference.py
services/old_vlm_server/: modal_app.py
services/old_vlm_server/tests/: test_grpc_inference.py
services/vlm_server/: Dockerfile  README.md  deploy_modal.sh  modal_app.py  pyproject.toml
services/vlm_server/src/vlm_server/: server.py
services/vlm_server/src/vlm_server/inference/: __init__.py  gemini.py  gpt.py  main.py  transformer.py
services/vlm_server/src/vlm_server/inference/vlm/: gemini.py  vlm.py
services/vlm_server/tests/: test_grpc_inference.py  test_inference.py
(+32 files in other folders)
