[project]
name = "gnosis"
version = "0.1.0"
description = "VLM evaluation platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pre-commit>=4.5.0",
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "pydantic>=2.12.5",
    "psycopg[pool]>=3.3.0",
    "python-levenshtein>=0.27.3",
    "scipy>=1.16.3",
    "fastapi>=0.124.2",
    "httpx>=0.28.1",
    "modal>=1.2.4",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
    "accelerate>=1.12.0",
    "google-genai>=1.55.0",
    "huggingface-hub>=0.36.0",
    "tokenizers>=0.22.1",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.1",
]

[tool.uv.workspace]
members = ["lib", "services/gateway", "services/vlm_server"]

