[project]
name = "gnosis"
version = "0.1.0"
description = "VLM evaluation platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "pre-commit>=4.5.0",
    "psycopg>=3.3.2",
    "psycopg-pool>=3.3.0",
    "pydantic>=2.12.5",
]

[tool.uv.workspace]
members = ["lib", "services/*"]
