[project]
name = "gnosis"
version = "0.1.0"
description = "VLM evaluation platform"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anyio>=4.0.0,<4.12",
    "click>=8.2",
    "dotenv>=0.9.9",
    "grpcio==1.78.0",
    "modal>=1.3.0.post1",
    "pre-commit>=4.5.0",
    "psycopg>=3.3.2",
    "psycopg-pool>=3.3.0",
    "pydantic>=2.12.5",
]

[tool.uv.workspace]
members = [
    "lib",
    "services/gateway",
    "services/vlm_server",
    "services/eval",
]
