[project]
name = "eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gnosis-gateway",
    "psycopg[binary]>=3.3.2",
]

[tool.uv.sources]
gnosis-gateway = { workspace = true, editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
