[project]
name = "eval"
version = "0.1.0"
description = "Evaluate VLMs' performance"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
