[project]
name = "eval"
version = "0.1.0"
description = "Evaluate VLMs performance"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.29",
    "dotenv>=0.9.9",
    "google-genai",
    "lib",
    "pillow>=11.1.0",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "supabase>=2.27.0",
]

[tool.uv.sources]
lib = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eval"]
