[project]
name = "gateway"
version = "0.1.0"
description = "Gnosis main API"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
gateway-server = "gateway.server:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gateway"]