[project]
name = "gateway"
version = "0.1.0"
description = "Gnosis main API"
requires-python = ">=3.14"
dependencies = [
    "grpcio>=1.76.0",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "fastapi>=0.124.2",
    "python-multipart>=0.0.20",
    "redis>=5.0.0",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
    "python-multipart>=0.0.20",
    "httpx>=0.28.1",
    "modal>=1.2.4",
    "requests>=2.32.5",
    "pymupdf>=1.24.0",
    "lib",
]

[tool.uv.sources]
lib = { workspace = true }

[project.scripts]
gateway-server = "gateway.server:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gateway"]
