[project]
name = "gnosis-gateway"
version = "0.1.0"
description = "Gnosis API Gateway"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"shared",
	"numpy",
	"pydantic",
	"fastapi",
	"uvicorn",
	"grpcio",
	"grpcio-tools",
	"modal",
	"opencv-python",
	"python-dotenv",
	"requests",
	"Pillow",
	"python-multipart",
	"httpx",
]

[tool.uv.sources]
shared-utils = { path = "../shared", editable = true }
shared = { path = "../shared", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
